--- a/public/sytle.css
+++ b/public/sytle.css
@@ -1,23 +1,3 @@
-/* eslint-disable */
-<template>
-  <div id="app">
-    <Product :premium="premium"></Product>
-  </div>
-</template>
-
-<script lang="ts">
-import { Component, Vue } from "vue-property-decorator";
-import Product from "./components/Product.vue";
-
-@Component({
-  components: {
-    Product,
-  },
-})
-export default class App extends Vue {}
-</script>
-
-<style>
 body {
   font-family: tahoma;
   color: #282828;
@@ -26,14 +6,10 @@ body {
 #app {
   display: block;
   align-items: center;
-  padding-left: 4rem;
+  padding: 0 4rem;
 }
 * {
   border-radius: 0.6rem;
-  /* border: 1px solid; */
-}
-#head {
-  /* display: flex; */
 }
 .header {
   display: flex;
@@ -67,7 +43,7 @@ body {
 }
 .product {
   display: flex;
-  flex-grow: fit-content;
+  flex: 1;
   flex-flow: wrap;
   padding: 1rem;
   height: fit-content;
@@ -85,15 +61,15 @@ img {
   box-shadow: 0px 0.5px 1px #d8d8d8;
 }
 .product-image {
-  flex-grow: fit-content;
+  flex: 1;
   margin: 0;
 }
 .product-info {
-  flex-grow: fit-content;
+  flex-grow: 1;
   align-self: center;
   justify-self: center;
   padding-left: 1rem;
-  margin: 0 2rem 0 1rem;
+  margin: 0 3rem 0 1rem;
   border-radius: 0;
   border-left: 1px solid;
 }
@@ -103,8 +79,10 @@ img {
   margin-top: 5px;
 }
 .cart {
-  margin-top: 16px;
   color: #fff;
+  margin-top: 16px;
+  justify-self: flex-end;
+  flex: 1;
   width: max-content;
   height: min-content;
   float: right;
@@ -149,4 +127,3 @@ textarea {
   color: #16c0b0;
   text-decoration: underline;
 }
-</style>
